--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <div cellIndex="7" class="cell" id="sn7"></div>
             <div cellIndex="8" class="cell" id="sn8"></div>
         </div>
+        <div class="flexCont">
         <h2 id="statusText"></h2>
-        <button id="restartBtn">Restart</button>
+        <button id="restartBtn">RESTART</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
