--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="message">This website is under maintenance and works only on larger screens.</div>
 
     <div class="game-container">
         <div class="cell-container">
